k8s/datapipe/datapipe.namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: datapipe
  labels:
    name: datapipe
